implementation arguments for commands, also trying to unit tests